# src/lib/api-doc.yaml
@@ -239,9 +239,9 @@ paths:
                               type: string
                               enum:
                                 - "ON_HOLD"
-                                - "IN_PROGRESS"
-                                - "COMPLETED"
-                                - "CANCELLED"
+                                - "In corso"
+                                - "Completato"
+                                - "Cancellato"
                               default: "ON_HOLD"
                             createdAt:
                               type: string
@@ -861,11 +861,11 @@ paths:
                         status:
                           type: string
                           enum:
-                            - "IN_DEPARTURE"
-                            - "IN_PROGRESS"
-                            - "COMPLETED"
-                            - "CANCELLED"
-                          default: "IN_DEPARTURE"
+                            - "In attesa"
+                            - "In corso"
+                            - "Completato"
+                            - "Cancellato"
+                          default: "In attesa"
                         createdAt:
                           type: string
                           example: "2025-02-12 18:14:47.456"
@@ -1033,11 +1033,11 @@ paths:
                       status:
                         type: string
                         enum:
-                          - "IN_DEPARTURE"
-                          - "IN_PROGRESS"
-                          - "COMPLETED"
-                          - "CANCELLED"
-                        default: "IN_DEPARTURE"
+                          - "In attesa"
+                          - "In corso"
+                          - "Completato"
+                          - "Cancellato"
+                        default: "In attesa"
                       createdAt:
                         type: string
                         example: "2025-02-12 18:14:47.456"
@@ -1110,10 +1110,10 @@ paths:
                   description: The updated details of the order
                 status:
                   type: string
-                  description: The new status of the order (e.g., "pending", "completed")
+                  description: The new status of the order (e.g., "pending", "Completato")
               example:
                 orderDetails: "Updated order details"
-                status: "completed"
+                status: "Completato"
       responses:
         200:
           description: Successfully updated the order
@@ -1206,11 +1206,11 @@ paths:
                       status:
                         type: string
                         enum:
-                          - "IN_DEPARTURE"
-                          - "IN_PROGRESS"
-                          - "COMPLETED"
-                          - "CANCELLED"
-                        default: "IN_DEPARTURE"
+                          - "In attesa"
+                          - "In corso"
+                          - "Completato"
+                          - "Cancellato"
+                        default: "In attesa"
                       createdAt:
                         type: string
                         example: "2025-02-12 18:14:47.456"
@@ -1446,11 +1446,11 @@ paths:
                       status:
                         type: string
                         enum:
-                          - "IN_DEPARTURE"
-                          - "IN_PROGRESS"
-                          - "COMPLETED"
-                          - "CANCELLED"
-                        default: "IN_DEPARTURE"
+                          - "In attesa"
+                          - "In corso"
+                          - "Completato"
+                          - "Cancellato"
+                        default: "In attesa"
                       createdAt:
                         type: string
                         example: "2025-02-12 18:14:47.456"
@@ -1552,6 +1552,134 @@ paths:
                     message:
                       type: string
                       example: "Internal Server Error"
+
+  /api/order/recentOrder:
+    get:
+      summary: Fetch recent orders
+      description: Fetch the most recent 10 orders created today for the authenticated admin user.
+      tags:
+          - Order
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successfully fetched recent orders
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "All Recent Orders fetched"
+                  data:
+                    type: array
+                    items:
+                       type: object
+                       properties:
+                        id:
+                          type: string
+                          example: 1161573e-bdf6-42cc-a7c1-4f6c84c99b21
+                        code:
+                          type: string
+                          example: ORD123456
+                        description:
+                          type: string
+                          example: "Order description here"
+                        workAmount:
+                          type: number
+                          format: decimal
+                          example: 15000.00
+                        advancePayment:
+                          type: number
+                          format: decimal
+                          example: 5000.00
+                        startDate:
+                          type: string
+                          format: date-time
+                          example: "2025-02-18T10:00:00Z"
+                        endDate:
+                          type: string
+                          format: date-time
+                          example: "2025-03-18T10:00:00Z"
+                        province:
+                          type: string
+                          example: "California"
+                        nation:
+                          type: string
+                          example: "United States"
+                        address:
+                          type: string
+                          example: "123 Main Street"
+                        common:
+                          type: string
+                          example: "1234"
+                        orderManager:
+                          type: string
+                          example: "John Doe"
+                        siteManager:
+                          type: string
+                          example: "Jane Smith"
+                        technicalManager:
+                          type: string
+                          example: "Alex Brown"
+                        cnceCode:
+                          type: string
+                          example: "CNCE-789"
+                        cap:
+                          type: string
+                          example: "CAP-101"
+                        cig:
+                          type: string
+                          example: "CIG-102"
+                        cup:
+                          type: string
+                          example: "CUP-103"
+                        iva:
+                          type: number
+                          example: 18.00
+                        discountPercentage:
+                          type: number
+                          example: 5.00
+                        dipositRecovery:
+                          type: number
+                          example: 100.00
+                        vat:
+                          type: number
+                          example: 12.00
+                        withholdingAmount:
+                          type: number
+                          example: 200.00
+                        attachment:
+                          type: string
+                          example: "path/to/contract.pdf"
+                        isPublic:
+                          type: boolean
+                          example: true
+                        status:
+                          type: string
+                          enum:
+                            - "In attesa"
+                            - "In corso"
+                            - "Completato"
+                            - "Cancellato"
+                          default: "In attesa"
+                        createdAt:
+                          type: string
+                          example: "2025-02-12 18:14:47.456"
+                        updatedAt:
+                          type: string
+                          example: "2025-02-11 22:19:34.99"
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Internal server error occurred"
 
   /api/order/archive:
     get:
